tests/fixtures/errors/generic_noinfer_type_arg.z
# E0400: a value arg binds no type param and there is no default to infer from.
holder: record {
    n: i64
} as { t: Any.generic }
main: function is {
    h: holder n: 5
}
